# org-labels

./: label-automation.py  label-automator-async.py  label-automator.py  labels.csv  labels.json  pyproject.toml  test.csv
