[tool.poetry]
name = "github-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "github_utils"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.24.1"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
